--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,7 @@
 
 # Coursera: Financial Engineering II: In-class Exercises in R
 
-* [Lesson 1.1: Mean Variance Overview](#Lesson-1.1:-Mean-Variance-Overview)
+* [Lesson 1.1: Mean Variance Overview](#Lesson-1.1--Mean-Variance-Overview)
 * [Lesson 1.3 Sharpe Optimal Portfolio and the Risk-Free Frontier](#Lesson-1.3-Sharpe-Optimal-Portfolio-and-the-Risk-Free-Frontier)
 
 ```{r}
@@ -11,7 +11,7 @@
 ```
 
 <br /><br />
-## <a name="Lesson-1.1:-Mean-Variance-Overview"></a>Lesson 1.1: Mean Variance Overview
+## <a name="Lesson-1.1--Mean-Variance-Overview"></a>Lesson 1.1: Mean Variance Overview
 
 
 ```{r}
@@ -399,6 +399,7 @@ And now plot the efficient frontier:
            col="red")
 
 ```
+
 
 
 
