--- a/README.Rmd
+++ b/README.Rmd
@@ -1,10 +1,19 @@
 
 # Coursera: Financial Engineering II: In-class Exercises in R
 
+* [R code](#R-code)
 * [Lesson 1.1: Mean Variance Overview](#Lesson-1.1--Mean-Variance-Overview)
 * [Lesson 1.3 Sharpe Optimal Portfolio and the Risk-Free Frontier](#Lesson-1.3-Sharpe-Optimal-Portfolio-and-the-Risk-Free-Frontier)
 
+
+<br /><br />
+## <a name="R-code"></a>R code
+
+[fin-eng-2.R](fin-eng-2.R)
+
 ```{r}
+
+    source("fin-eng-2.R")
 
     options(width=100)
 
@@ -274,7 +283,6 @@ And now plot the efficient frontier:
 
 ```{r}
 
-    source("fin-eng-2.R")
 
     #
     # Global minimum variance portfolio: portfolio that has
@@ -399,6 +407,7 @@ And now plot the efficient frontier:
            col="red")
 
 ```
+
 
 
 
